--- a/docs/antora/modules/ROOT/pages/Intro_to_Mill.adoc
+++ b/docs/antora/modules/ROOT/pages/Intro_to_Mill.adoc
@@ -958,7 +958,7 @@ Note that both of these overrides only work for versions 0.5.0 and above.
 
 === Development Releases
 
-In case you want to try out the latest features and improvements that are currently in master, unstable versions of Mill
+In case you want to try out the latest features and improvements that are currently in the main branch, unstable versions of Mill
 are
 https://github.com/com-lihaoyi/mill/releases[available] as binaries named
 `+#.#.#-n-hash+` linked to the latest tag. Installing the latest unstable release is recommended for bootstrapping mill.
