--- a/readme.adoc
+++ b/readme.adoc
@@ -10,7 +10,7 @@
 :link-issue: {link-github}/issues
 :example-scala-version: 2.13.1
 
-{link-github}/actions[image:{link-github}/workflows/ci-push-validation/badge.svg[Build Status]]
+{link-github}/actions/workflows/actions.yml[image:{link-github}/actions/workflows/actions.yml/badge.svg[Build and Release]]
 {link-gitter}?utm_source=badge&utm_medium=badge&utm_campaign=pr-badge&utm_content=badge[image:https://badges.gitter.im/Join%20Chat.svg[Gitter Chat]]
 https://www.patreon.com/lihaoyi[image:https://img.shields.io/badge/patreon-sponsor-ff69b4.svg[Patreon]]
 
@@ -200,9 +200,8 @@ optimizer without classpath conflicts.
 These are modules that help integrate Mill with the wide variety of different
 tools and utilities available in the JVM ecosystem.
 
-These modules are not as stringently reviewed as the main Mill core/worker codebase,
-and are primarily maintained by their individual contributors. These are maintained
-as part of the primary Mill Github repo for easy testing/updating as the core Mill
+These modules are not as stringently reviewed as the main Mill core/worker codebase, and are primarily maintained by their individual contributors.
+These are maintained as part of the primary Mill Github repo for easy testing/updating as the core Mill
 APIs evolve, ensuring that they are always tested and passing against the
 corresponding version of Mill.
 
@@ -216,10 +215,6 @@ and the {link-compare}/0.9.6\...main[list of commits]._
 
 === 0.9.7 - 2021-05-14
 
-_For details refer to
-{link-milestone}/48?closed=1[milestone 0.9.7]
-and the {link-compare}/0.9.6\...0.9.7[list of commits]._
-
 * `ScalaModule`: Support for Scala 3
 * `CoursierModule`: Support customized dependency resolution (needed to work with ScalaFX)
 * `TestModule`: Added new `testFramework` target and only support one test framework. Deprecated `testFrameworks` targets.
@@ -229,6 +224,10 @@ and the {link-compare}/0.9.6\...0.9.7[list of commits]._
 * Various internal improvements, cleanups, and deprecations
 * Various dependencies updates
 * Removed tut contrib module because of unmaintained/archived upstream dependency
+
+_For details refer to
+{link-milestone}/48?closed=1[milestone 0.9.7]
+and the {link-compare}/0.9.6\...0.9.7[list of commits]._
 
 
 === 0.9.6 - 2021-04-03
