Added missing comma in docs

--- a/docs/antora/modules/ROOT/pages/Modules.adoc
+++ b/docs/antora/modules/ROOT/pages/Modules.adoc
@@ -61,7 +61,7 @@ This would make the following targets available from the command line
 The built-in `mill.scalalib` package uses this to define
 `mill.scalalib.ScalaModule`, `mill.scalalib.SbtModule` and
 `mill.scalalib.TestScalaModule`, all of which contain a set of "standard"
-operations such as `compile` `jar` or `assembly` that you may expect from a
+operations such as `compile`, `jar` or `assembly` that you may expect from a
 typical Scala module.
 
 When defining your own module abstractions, in general you should use ``trait``s
