Added the work "Plugins" to the modules pages

--- a/docs/antora/modules/ROOT/pages/Contrib_Modules.adoc
+++ b/docs/antora/modules/ROOT/pages/Contrib_Modules.adoc
@@ -1,6 +1,6 @@
-= Contrib Modules
+= Contrib Modules / Plugins
 
-The plugins in this section are developed/maintained in the mill git tree.
+The ((plugins)) in this section are developed/maintained in the mill git tree.
 
 When using one of these contribution modules, it is important that the versions you load match your mill version. To facilitate this, Mill will automatically replace the `$MILL_VERSION` literal in your ivy imports with the correct value.
 
