Support more mill-specifics in $ivy-import
Support $MILL_BIN_PLATFORM placeholder and new $ivy.`g::a::v` syntax (borrowed from Scala JS/Native dependency notation)

Also updated Documentation and renamed two pages (Modules => Plugins).

--- a/docs/antora/modules/ROOT/nav.adoc
+++ b/docs/antora/modules/ROOT/nav.adoc
@@ -7,5 +7,5 @@
 * xref:Cross_Builds.adoc[]
 * xref:Extending_Mill.adoc[]
 * xref:Mill_Internals.adoc[]
-* xref:Contrib_Modules.adoc[]
-* xref:Thirdparty_Modules.adoc[]
+* xref:Contrib_Plugins.adoc[]
+* xref:Thirdparty_Plugins.adoc[]
